add id for section div

--- a/ParkingManagementSystem/homePage.html
+++ b/ParkingManagementSystem/homePage.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div class="background-image">
-      <div class="section">
+    
+      <div class="section" id="section-1">
         <a href="User Form.html"><button class="ui primary button">Check In</button></a>
       </div>
       <div class="section">
