--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     Hi welcome to GIT Hub 
-    <p>This is for second commit!!</p>
+    <p>This is for  commit!! wothout staging</p>
 </body>
 </html>
